Remove obsolete TODOs which has been handled in 27faf10881b